--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    my name is deepanshi
+    <tr>
+<th>NAME</th>
+    <TH> CLASS</TH>
+    </tr>
 </body>
 </html>
